@@ -450,6 +450,22 @@ name|tools
 operator|.
 name|generic
 operator|.
+name|LocaleConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|velocity
+operator|.
+name|tools
+operator|.
+name|generic
+operator|.
 name|MathTool
 import|;
 end_import
@@ -1374,6 +1390,35 @@ name|VelocityContext
 argument_list|()
 decl_stmt|;
 comment|// Register useful Velocity "tools"
+name|String
+name|locale
+init|=
+name|request
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|LOCALE
+argument_list|)
+decl_stmt|;
+name|Map
+name|toolConfig
+init|=
+operator|new
+name|HashMap
+argument_list|()
+decl_stmt|;
+name|toolConfig
+operator|.
+name|put
+argument_list|(
+literal|"locale"
+argument_list|,
+name|locale
+argument_list|)
+expr_stmt|;
 name|context
 operator|.
 name|put
@@ -1421,11 +1466,48 @@ name|context
 operator|.
 name|put
 argument_list|(
-literal|"math"
+literal|"sort"
 argument_list|,
+operator|new
+name|SortTool
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|MathTool
+name|mathTool
+init|=
 operator|new
 name|MathTool
 argument_list|()
+decl_stmt|;
+name|mathTool
+operator|.
+name|configure
+argument_list|(
+name|toolConfig
+argument_list|)
+expr_stmt|;
+name|context
+operator|.
+name|put
+argument_list|(
+literal|"math"
+argument_list|,
+name|mathTool
+argument_list|)
+expr_stmt|;
+name|NumberTool
+name|numberTool
+init|=
+operator|new
+name|NumberTool
+argument_list|()
+decl_stmt|;
+name|numberTool
+operator|.
+name|configure
+argument_list|(
+name|toolConfig
 argument_list|)
 expr_stmt|;
 name|context
@@ -1434,20 +1516,21 @@ name|put
 argument_list|(
 literal|"number"
 argument_list|,
-operator|new
-name|NumberTool
-argument_list|()
+name|numberTool
 argument_list|)
 expr_stmt|;
-name|context
-operator|.
-name|put
-argument_list|(
-literal|"sort"
-argument_list|,
+name|DisplayTool
+name|displayTool
+init|=
 operator|new
-name|SortTool
+name|DisplayTool
 argument_list|()
+decl_stmt|;
+name|displayTool
+operator|.
+name|configure
+argument_list|(
+name|toolConfig
 argument_list|)
 expr_stmt|;
 name|context
@@ -1456,17 +1539,12 @@ name|put
 argument_list|(
 literal|"display"
 argument_list|,
-operator|new
-name|DisplayTool
-argument_list|()
+name|displayTool
 argument_list|)
 expr_stmt|;
-name|context
-operator|.
-name|put
-argument_list|(
-literal|"resource"
-argument_list|,
+name|ResourceTool
+name|resourceTool
+init|=
 operator|new
 name|SolrVelocityResourceTool
 argument_list|(
@@ -1483,20 +1561,25 @@ argument_list|()
 operator|.
 name|getClassLoader
 argument_list|()
-argument_list|,
-name|request
+argument_list|)
+decl_stmt|;
+name|resourceTool
 operator|.
-name|getParams
-argument_list|()
-operator|.
-name|get
+name|configure
 argument_list|(
-name|LOCALE
-argument_list|)
-argument_list|)
+name|toolConfig
 argument_list|)
 expr_stmt|;
-comment|/*     // Custom tools, specified in config as:<queryResponseWriter name="velocityWithCustomTools" class="solr.VelocityResponseWriter"><lst name="tools"><str name="mytool">com.example.solr.velocity.MyTool</str></lst></queryResponseWriter>   */
+name|context
+operator|.
+name|put
+argument_list|(
+literal|"resource"
+argument_list|,
+name|resourceTool
+argument_list|)
+expr_stmt|;
+comment|/*     // Custom tools, specified in config as:<queryResponseWriter name="velocityWithCustomTools" class="solr.VelocityResponseWriter"><lst name="tools"><str name="mytool">com.example.solr.velocity.MyTool</str></lst></queryResponseWriter> */
 comment|// Custom tools can override any of the built-in tools provided above, by registering one with the same name
 for|for
 control|(
@@ -1509,12 +1592,9 @@ name|keySet
 argument_list|()
 control|)
 block|{
-name|context
-operator|.
-name|put
-argument_list|(
-name|name
-argument_list|,
+name|Object
+name|customTool
+init|=
 name|SolrCore
 operator|.
 name|createInstance
@@ -1530,7 +1610,9 @@ name|Object
 operator|.
 name|class
 argument_list|,
-literal|"VrW custom tool"
+literal|"VrW custom tool: "
+operator|+
+name|name
 argument_list|,
 name|request
 operator|.
@@ -1545,6 +1627,34 @@ operator|.
 name|getResourceLoader
 argument_list|()
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|customTool
+operator|instanceof
+name|LocaleConfig
+condition|)
+block|{
+operator|(
+operator|(
+name|LocaleConfig
+operator|)
+name|customTool
+operator|)
+operator|.
+name|configure
+argument_list|(
+name|toolConfig
+argument_list|)
+expr_stmt|;
+block|}
+name|context
+operator|.
+name|put
+argument_list|(
+name|name
+argument_list|,
+name|customTool
 argument_list|)
 expr_stmt|;
 block|}
@@ -2119,9 +2229,6 @@ name|SolrVelocityResourceTool
 parameter_list|(
 name|ClassLoader
 name|cl
-parameter_list|,
-name|String
-name|localeString
 parameter_list|)
 block|{
 name|this
@@ -2129,29 +2236,6 @@ operator|.
 name|solrClassLoader
 operator|=
 name|cl
-expr_stmt|;
-name|Locale
-name|l
-init|=
-name|toLocale
-argument_list|(
-name|localeString
-argument_list|)
-decl_stmt|;
-name|this
-operator|.
-name|setLocale
-argument_list|(
-name|l
-operator|==
-literal|null
-condition|?
-name|Locale
-operator|.
-name|ROOT
-else|:
-name|l
-argument_list|)
 expr_stmt|;
 block|}
 annotation|@
