@@ -30,11 +30,29 @@ name|SolrCore
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|velocity
+operator|.
+name|tools
+operator|.
+name|generic
+operator|.
+name|LocaleConfig
+import|;
+end_import
+
 begin_class
 DECL|class|MockTool
 specifier|public
 class|class
 name|MockTool
+extends|extends
+name|LocaleConfig
 block|{
 DECL|field|core
 specifier|private
