@@ -785,6 +785,7 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+comment|// custom_tool.vm responds with $!mytool.star("foo"), but $mytool is not defined (only in velocityWithCustomTools)
 name|assertEquals
 argument_list|(
 literal|""
@@ -1027,6 +1028,131 @@ operator|.
 name|TEMPLATE
 argument_list|,
 literal|"resource_get"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Test that $number tool uses the specified locale
+name|assertEquals
+argument_list|(
+literal|"2,112"
+argument_list|,
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"velocityWithCustomTools"
+argument_list|,
+name|VelocityResponseWriter
+operator|.
+name|TEMPLATE
+argument_list|,
+literal|"t"
+argument_list|,
+name|SolrParamResourceLoader
+operator|.
+name|TEMPLATE_PARAM_PREFIX
+operator|+
+literal|"t"
+argument_list|,
+literal|"$number.format(2112)"
+argument_list|,
+name|VelocityResponseWriter
+operator|.
+name|LOCALE
+argument_list|,
+literal|"en_US"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"2.112"
+argument_list|,
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"velocityWithCustomTools"
+argument_list|,
+name|VelocityResponseWriter
+operator|.
+name|TEMPLATE
+argument_list|,
+literal|"t"
+argument_list|,
+name|SolrParamResourceLoader
+operator|.
+name|TEMPLATE_PARAM_PREFIX
+operator|+
+literal|"t"
+argument_list|,
+literal|"$number.format(2112)"
+argument_list|,
+name|VelocityResponseWriter
+operator|.
+name|LOCALE
+argument_list|,
+literal|"de_DE"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Test that custom tool extending LocaleConfig gets the right locale
+name|assertEquals
+argument_list|(
+literal|"de_DE"
+argument_list|,
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"velocityWithCustomTools"
+argument_list|,
+name|VelocityResponseWriter
+operator|.
+name|TEMPLATE
+argument_list|,
+literal|"t"
+argument_list|,
+name|SolrParamResourceLoader
+operator|.
+name|TEMPLATE_PARAM_PREFIX
+operator|+
+literal|"t"
+argument_list|,
+literal|"$mytool.locale"
+argument_list|,
+name|VelocityResponseWriter
+operator|.
+name|LOCALE
+argument_list|,
+literal|"de_DE"
 argument_list|)
 argument_list|)
 argument_list|)
